feat: emotion/css 11

--- a/template/react.tmpl
+++ b/template/react.tmpl
@@ -3,6 +3,7 @@
   <head>
     <title>gov8react | Go React SSR with V8 Binding</title>
     <meta charset="UTF-8" />
+    <style data-emotion="{{ .EmotionKey }} {{ .EmotionIds }}">{{ .EmotionCss }}</style>
   </head>
   <body>
     <div id="app">{{ .ReactApp }}</div>
