chore: bundle name

--- a/template/react.tmpl
+++ b/template/react.tmpl
@@ -11,7 +11,7 @@
 <script>
 window.__GO_APP_STATE__={{ .AppState }};
 </script>
-<script async defer src="/static/main.bundle.js"></script>
+<script async defer src="/static/main.client.js"></script>
 {{ end }}
 </body>
 </html>
