--- a/template/react.tmpl
+++ b/template/react.tmpl
@@ -3,7 +3,7 @@
 <head>
 <title>gov8react | Go React SSR with V8 Binding</title>
 <meta charset="UTF-8" />
-<style data-emotion="{{ .EmotionKey }} {{ .EmotionIds }}">{{ .EmotionCss }}</style>
+<style data-emotion="{{ .Emotion.Key }} {{ .Emotion.Ids }}">{{ .Emotion.Css }}</style>
 </head>
 <body>
 <div id="app">{{ .ReactApp }}</div>
